--- a/TimeManager1/pom.xml
+++ b/TimeManager1/pom.xml
@@ -86,6 +86,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
+
         <!-- (Optional) JetBrains annotations you had -->
         <dependency>
             <groupId>org.jetbrains</groupId>
