--- a/TimeManager1/src/main/resources/application.properties
+++ b/TimeManager1/src/main/resources/application.properties
@@ -7,6 +7,12 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# JWT
+app.jwt.secret=ThisShouldBeAVeryLongStringAndIGuessThisIsTheCase
+app.jwt.expiration=3600
+app.jwt.issuer=timemanager
+
+
 server.port=8080
 spring.docker.compose.enabled=false
 spring.session.store-type=none
