connection établie entre le back et le front

--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -16,3 +16,5 @@ app.jwt.issuer=timemanager
 server.port=8080
 spring.docker.compose.enabled=false
 spring.session.store-type=none
+
+logging.level.org.springframework.security=DEBUG
