--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/teammanager_db
+spring.datasource.url=jdbc:postgresql://postgres:5432/teammanager_db
 spring.datasource.username=postgres
 spring.datasource.password=0000
 spring.datasource.driver-class-name=org.postgresql.Driver
