--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -16,3 +16,13 @@ app.jwt.issuer=timemanager
 server.port=8080
 spring.docker.compose.enabled=false
 spring.session.store-type=none
+
+# --- Mail (MailHog local) ---
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+app.mail.from=TimeManager <no-reply@timemanager.local>
