--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -24,5 +24,5 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
-
+spring.kafka.bootstrap-servers=localhost:9094
 app.mail.from=TimeManager <no-reply@timemanager.local>
