--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -24,5 +24,15 @@ spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
-spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.bootstrap-servers=localhost:9092
 app.mail.from=TimeManager <no-reply@timemanager.local>
+
+# Kafka (recommended defaults)
+spring.kafka.consumer.group-id=timemanager
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.profiles.active=dev
+
+# If you?ll send JSON objects (recommended)
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=epitech.timemanager1.*
