--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -34,5 +34,14 @@ spring.profiles.active=dev
 
 # If you?ll send JSON objects (recommended)
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.value.default.type=epitech.timemanager1.events.PasswordResetRequestedEvent
+
 spring.kafka.consumer.properties.spring.json.trusted.packages=epitech.timemanager1.*
+
+spring.kafka.listener.ack-mode=record
+
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
+
