--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres:17-alpine
     container_name: timemanager-db
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 0000
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: teammanager_db
+      POSTGRES_HOST_AUTH_METHOD: md5
     ports:
       - "5434:5432"
     volumes:
