--- a/backend/TimeManager1/pom.xml
+++ b/backend/TimeManager1/pom.xml
@@ -22,6 +22,10 @@
         <mapstruct.version>1.6.2</mapstruct.version>
         <lombok.version>1.18.40</lombok.version>
         <jjwt.version>0.11.5</jjwt.version>
+
+        <!-- SonarCloud configuration -->
+        <sonar.organization>charlesnts</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
