--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^4.0.16",
     "autoprefixer": "^10.4.19",
+    "baseline-browser-mapping": "^2.9.12",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
