--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "happy-dom": "^20.1.0",
     "jsdom": "^27.4.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
