config(backend): configurer l'URL de réinitialisation HTTP et ajouter le service API password

--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -12,6 +12,8 @@ app.jwt.secret=ThisShouldBeAVeryLongStringAndIGuessThisIsTheCase
 app.jwt.expiration=3600
 app.jwt.issuer=timemanager
 
+# Reset Link (Local Dev)
+app.reset-link-base=http://localhost:5173/reset-password?token=
 
 server.port=8080
 spring.docker.compose.enabled=false
@@ -44,4 +46,3 @@ spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.sp
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.key-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
 spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apache.kafka.common.serialization.StringDeserializer
-
