--- a/backend/TimeManager1/pom.xml
+++ b/backend/TimeManager1/pom.xml
@@ -23,9 +23,11 @@
         <lombok.version>1.18.40</lombok.version>
         <jjwt.version>0.11.5</jjwt.version>
 
-        <!-- SonarCloud configuration -->
+        <!-- SonarCloud Configuration -->
         <sonar.organization>charlesnts</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.projectKey>timemanager-backend</sonar.projectKey>
+        <sonar.projectName>TimeManager Backend</sonar.projectName>
     </properties>
 
     <dependencies>
@@ -131,42 +133,7 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.6</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.kafka</groupId>
-            <artifactId>spring-kafka-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>4.2.1</version>
-            <scope>test</scope>
-        </dependency>
-
-
     </dependencies>
-
-
 
     <build>
         <plugins>
