--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -39,7 +39,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           cd backend/TimeManager1
-          mvn clean verify -DskipTests sonar:sonar -Dsonar.token=$SONAR_TOKEN
+          mvn clean verify sonar:sonar -Dsonar.token=$SONAR_TOKEN
 
       - name: SonarCloud Quality Gate check
         uses: sonarsource/sonarqube-quality-gate-action@master
