--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,7 +47,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/coverage-istanbul": "^4.0.16",
     "autoprefixer": "^10.4.19",
     "baseline-browser-mapping": "^2.9.12",
     "eslint": "^8.57.0",
