Refactor and enhance UserServiceTest setup and test methods
Standardize method naming for test data generation and improve mocking consistency in the test setup. Update test cases to reduce redundancy, improve readability, and align with updated method contracts and naming conventions.

--- a/backend/TimeManager1/src/main/resources/application.properties
+++ b/backend/TimeManager1/src/main/resources/application.properties
@@ -60,4 +60,4 @@ spring.kafka.consumer.properties.spring.deserializer.key.delegate.class=org.apac
 # ===============================
 # Profile
 # ===============================
-spring.profiles.active=dev
+spring.profiles.active=test
