--- a/backend/TimeManager1/src/test/resources/application-test.properties
+++ b/backend/TimeManager1/src/test/resources/application-test.properties
@@ -1,6 +1,32 @@
+# ===============================
+# DATABASE (H2 for tests)
+# ===============================
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+# ===============================
+# KAFKA (DISABLED FOR TESTS)
+# ===============================
+spring.kafka.bootstrap-servers=dummy:9092
 spring.kafka.listener.auto-startup=false
-spring.kafka.bootstrap-servers=
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.listener.missing-topics-fatal=false
+
+# ===============================
+# MAIL (DISABLED LOGICALLY)
+# ===============================
 spring.mail.host=localhost
 spring.mail.port=1025
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+# ===============================
+# CUSTOM FLAGS (VERY IMPORTANT)
+# ===============================
+app.kafka.enabled=false
+app.mail.enabled=false
