fix: configuration des tests pour désactiver Kafka et Mail
- Ajout de H2 database pour les tests (in-memory)
- Configuration application-test.properties pour exclure Kafka auto-configuration
- Création de TestConfig pour mocker les KafkaTemplate beans
- Création de l'annotation @IntegrationTest pour réduire le boilerplate
- Mise à jour de tous les tests d'intégration pour utiliser @IntegrationTest
- Les tests peuvent maintenant s'exécuter sans Kafka/Mail puisque ces services ne sont pas déployés

--- a/backend/TimeManager1/src/test/resources/application-test.properties
+++ b/backend/TimeManager1/src/test/resources/application-test.properties
@@ -1,6 +1,22 @@
+# Disable Kafka auto-configuration for tests
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+
+# Kafka configuration (disabled)
+spring.kafka.enabled=false
 spring.kafka.listener.auto-startup=false
 spring.kafka.bootstrap-servers=
+
+# Mail configuration (use mock server)
 spring.mail.host=localhost
 spring.mail.port=1025
+
+# Database configuration (in-memory H2)
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=false
+
+# Logging
+logging.level.epitech.timemanager1=DEBUG
+logging.level.org.springframework.kafka=OFF
