--- a/backend/TimeManager1/src/test/resources/application-test.properties
+++ b/backend/TimeManager1/src/test/resources/application-test.properties
@@ -22,6 +22,7 @@ spring.kafka.bootstrap-servers=dummy:9092
 spring.kafka.listener.auto-startup=false
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.listener.missing-topics-fatal=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
 
 # ===============================
 # MAIL (DISABLED LOGICALLY)
