--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,10 +113,10 @@ jobs:
 # ==================================================
 # SONARCLOUD
 # ==================================================
-  sonarqube-analysis:
-    name: SonarCloud Analysis
+  sonarcloud-backend:
+    name: SonarCloud - Backend
     runs-on: ubuntu-latest
-    needs: [backend-build-test, frontend-build-test]
+    needs: [backend-build-test]
 
     steps:
       - name: Checkout code
@@ -131,6 +131,31 @@ jobs:
           distribution: temurin
           cache: maven
 
+      - name: Build backend and generate coverage
+        run: |
+          cd backend/TimeManager1
+          mvn clean test -Dspring.profiles.active=ci -Dtest='**/services/**Test'
+          mvn jacoco:report -Dspring.profiles.active=ci
+
+      - name: Analyze backend with SonarCloud
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          cd backend/TimeManager1
+          mvn sonar:sonar -Dsonar.qualitygate.wait=true
+
+  sonarcloud-frontend:
+    name: SonarCloud - Frontend
+    runs-on: ubuntu-latest
+    needs: [frontend-build-test]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -138,34 +163,20 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Build backend and generate coverage
-        run: |
-          cd backend/TimeManager1
-          mvn clean test -Dspring.profiles.active=ci -Dtest='**/services/**Test'
-          mvn jacoco:report -Dspring.profiles.active=ci
-
       - name: Install frontend dependencies and run tests with coverage
         run: |
           cd frontend
           npm ci
           npm test -- --run --coverage
 
-      - name: SonarCloud Scan
+      - name: Analyze frontend with SonarCloud
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
+          projectBaseDir: frontend
           args: >
-            -Dsonar.projectKey=CharlesNts_TimeManager
-            -Dsonar.organization=charlesnts
-            -Dsonar.sources=frontend/src,backend/TimeManager1/src/main
-            -Dsonar.tests=frontend/src/tests,backend/TimeManager1/src/test
-            -Dsonar.java.binaries=backend/TimeManager1/target/classes
-            -Dsonar.coverage.jacoco.xmlReportPaths=backend/TimeManager1/target/site/jacoco/jacoco.xml
-            -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
-            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/target/**,**/tests/**,**/*.test.js,**/*.test.jsx,**/*.spec.js,**/*.spec.jsx
-            -Dsonar.sourceEncoding=UTF-8
             -Dsonar.qualitygate.wait=true
 
 # ==================================================
@@ -174,7 +185,7 @@ jobs:
   final-report:
     name: Final CI Report
     runs-on: ubuntu-latest
-    needs: [backend-build-test, frontend-build-test, sonarqube-analysis]
+    needs: [backend-build-test, frontend-build-test, sonarcloud-backend, sonarcloud-frontend]
     if: always()
 
     steps:
@@ -184,4 +195,5 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✔ Backend build & tests" >> $GITHUB_STEP_SUMMARY
           echo "✔ Frontend build & tests" >> $GITHUB_STEP_SUMMARY
-          echo "✔ SonarCloud analysis" >> $GITHUB_STEP_SUMMARY
+          echo "✔ SonarCloud Backend analysis" >> $GITHUB_STEP_SUMMARY
+          echo "✔ SonarCloud Frontend analysis" >> $GITHUB_STEP_SUMMARY
