--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,10 +113,10 @@ jobs:
 # ==================================================
 # SONARCLOUD
 # ==================================================
-  sonarcloud-backend:
-    name: SonarCloud - Backend
+  sonarcloud-analysis:
+    name: SonarCloud Analysis
     runs-on: ubuntu-latest
-    needs: [backend-build-test]
+    needs: [backend-build-test, frontend-build-test]
 
     steps:
       - name: Checkout code
@@ -131,31 +131,6 @@ jobs:
           distribution: temurin
           cache: maven
 
-      - name: Build backend and generate coverage
-        run: |
-          cd backend/TimeManager1
-          mvn clean test -Dspring.profiles.active=ci -Dtest='**/services/**Test'
-          mvn jacoco:report -Dspring.profiles.active=ci
-
-      - name: Analyze backend with SonarCloud
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          cd backend/TimeManager1
-          mvn sonar:sonar -Dsonar.qualitygate.wait=true
-
-  sonarcloud-frontend:
-    name: SonarCloud - Frontend
-    runs-on: ubuntu-latest
-    needs: [frontend-build-test]
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -163,21 +138,35 @@ jobs:
           cache: npm
           cache-dependency-path: frontend/package-lock.json
 
+      - name: Build backend and generate coverage
+        run: |
+          cd backend/TimeManager1
+          mvn clean test -Dspring.profiles.active=ci -Dtest='**/services/**Test'
+          mvn jacoco:report -Dspring.profiles.active=ci
+
       - name: Install frontend dependencies and run tests with coverage
         run: |
           cd frontend
           npm ci
           npm test -- --run --coverage
 
-      - name: Analyze frontend with SonarCloud
+      - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
-          projectBaseDir: frontend
           args: >
-            -Dsonar.qualitygate.wait=true
+            -Dsonar.projectKey=CharlesNts_TimeManager
+            -Dsonar.organization=charlesnts
+            -Dsonar.sources=frontend/src,backend/TimeManager1/src/main
+            -Dsonar.tests=frontend/src/tests,backend/TimeManager1/src/test
+            -Dsonar.java.binaries=backend/TimeManager1/target/classes
+            -Dsonar.coverage.jacoco.xmlReportPaths=backend/TimeManager1/target/site/jacoco/jacoco.xml
+            -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+            -Dsonar.exclusions=**/node_modules/**,**/dist/**,**/target/**,**/tests/**,**/*.test.js,**/*.test.jsx,**/*.spec.js,**/*.spec.jsx
+            -Dsonar.sourceEncoding=UTF-8
+            -Dsonar.qualitygate.wait=false
 
 # ==================================================
 # FINAL REPORT
@@ -185,7 +174,7 @@ jobs:
   final-report:
     name: Final CI Report
     runs-on: ubuntu-latest
-    needs: [backend-build-test, frontend-build-test, sonarcloud-backend, sonarcloud-frontend]
+    needs: [backend-build-test, frontend-build-test, sonarcloud-analysis]
     if: always()
 
     steps:
@@ -195,5 +184,4 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "✔ Backend build & tests" >> $GITHUB_STEP_SUMMARY
           echo "✔ Frontend build & tests" >> $GITHUB_STEP_SUMMARY
-          echo "✔ SonarCloud Backend analysis" >> $GITHUB_STEP_SUMMARY
-          echo "✔ SonarCloud Frontend analysis" >> $GITHUB_STEP_SUMMARY
+          echo "✔ SonarCloud analysis" >> $GITHUB_STEP_SUMMARY
