--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.400.0",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
     "react-dom": "^18.3.1",
