Add DTO unit tests and conditional Kafka integration property
Introduced unit tests for various DTOs to ensure consistent behavior and reliability. Added the `@ConditionalOnProperty` annotation to Kafka listeners for better configurability and conditional initialization based on the `app.kafka.enabled` flag. Updated application test properties for improved clarity and flexibility in test environments.

--- a/backend/TimeManager1/src/test/resources/application-test.properties
+++ b/backend/TimeManager1/src/test/resources/application-test.properties
@@ -1,8 +1,11 @@
 # ===============================
-# Disable Kafka auto-configuration for tests
+# SPRING PROFILE
 # ===============================
-spring.autoconfigure.exclude=\
-  org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+
+# ===============================
+# DISABLE KAFKA AUTO-CONFIGURATION
+# ===============================
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
 
 # ===============================
 # DATABASE (H2 for tests)
@@ -14,18 +17,19 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
+spring.jpa.open-in-view=true
 
 # ===============================
 # KAFKA (DISABLED FOR TESTS)
 # ===============================
-spring.kafka.bootstrap-servers=dummy:9092
 spring.kafka.listener.auto-startup=false
-spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.listener.missing-topics-fatal=false
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
+
+# Dummy value to satisfy property resolution
+spring.kafka.bootstrap-servers=localhost:9092
 
 # ===============================
-# MAIL (DISABLED LOGICALLY)
+# MAIL (DISABLED FOR TESTS)
 # ===============================
 spring.mail.host=localhost
 spring.mail.port=1025
@@ -33,7 +37,7 @@ spring.mail.properties.mail.smtp.auth=false
 spring.mail.properties.mail.smtp.starttls.enable=false
 
 # ===============================
-# CUSTOM FLAGS (VERY IMPORTANT)
+# CUSTOM APP FLAGS
 # ===============================
 app.kafka.enabled=false
 app.mail.enabled=false
@@ -43,3 +47,4 @@ app.mail.enabled=false
 # ===============================
 logging.level.epitech.timemanager1=DEBUG
 logging.level.org.springframework.kafka=OFF
+logging.level.org.apache.kafka=OFF
